# tree-sitter-practice

./: Cargo.toml  README.md  binding.gyp  grammar.js  package.json
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
src/: grammar.json  main.rs  node-types.json  parser.c
test/corpus/: assignment.txt  comment.txt  expression.txt  hello.txt
wasm/: practice.html  run_server.sh  tree-sitter-practice.wasm
